[package]
name = "zk_compression"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_compression"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.31.1"
light-hasher = { version = "5.0.0", features = ["solana"] }
light-sdk = { version = "0.17.1", features = ["anchor"] }
light-sdk-types = { version = "0.17.1", features = ["anchor"] }
light-merkle-tree-reference = "4.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
